<?xml version="1.0"?>
<package format="2">
  <name>sg_platform</name>
  <version>0.0.0</version>
  <description>TODO</description>


  <maintainer email="cychitivav@unal.edu.co">Cristian Chitiva</maintainer>

  <license>MIT</license>
  
  <url type="github">https://github.com/cychitivav/sg_platform</url>
  
  <author email="cychitivav@unal.edu.co">Cristian Chitiva</author>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>

  <build_export_depend>rospy</build_export_depend>

  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export> 
</package>